added some styles and text on home and about me

--- a/index.html
+++ b/index.html
@@ -19,11 +19,21 @@
         </nav>
 
         <div id="sec1">
-            <h1>This is home</h1>
+          <div class="header"> 
+            <h3>Hi guys ! I'm</h3>
+            <h1>Jim Marklino Lao</h1>
+            <h3>future Developer</h3>
+          </div>
         </div>
         
         <div id="sec2">
-            <h2>this is about me</h2>
+            <h2>I am a student from the University
+                of Science and Technology of southern
+                Philippines.
+                I am a future full stack developer (char ra bitaw)
+                and a very enthusiastic person ready and open to any
+                kind of ideas and future innovations
+            </h2>
         </div>
         
         <div id="sec3">
